changed integration tests to report more details on failure